--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "nestjs-mongo-clean-architecture",
+  "name": "nest-codebase",
   "version": "0.0.1",
   "description": "",
   "author": "",
