--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "nest-codebase",
   "version": "0.0.1",
-  "description": "",
-  "author": "",
+  "description": "NestJS Codebase Clean Architecture with Signature",
+  "author": "lucifergotmad",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
@@ -33,7 +33,8 @@
     "class-validator": "^0.14.0",
     "crypto-js": "^4.2.0",
     "helmet": "^7.1.0",
-    "ip": "^1.1.8",
+    "ip": "^2.0.1",
+    "moment-timezone": "^0.5.45",
     "mongoose": "^8.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
