feat:[major] initial commit

--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,15 @@
-MODE=< DEVELOPMENT|PRODUCTION >
-PORT=3001
-HTTPS_MODE=< 1 | 0 >
+MODE=< development|production >
+PORT=< YOUR_PORT_NUMBER >
+IS_SECURE=< 1 | 0 >
 
-DB_CONNECTION_URI=mongodb+srv://username:password@cluster.net/db_name
-JWT_SECRET_KEY=jwt_key
-JWT_REFRESH_KEY=jwt_refresh
+DB_CONNECTION_URI=< YOUR_DB_CONNECTION_URI >
+JWT_SECRET_KEY=< YOUR_ACCESS_TOKEN_SECRET_KEY >
+JWT_REFRESH_KEY=< YOUR_REFRESH_TOKEN_SECRET_KEY >
+JWT_LIMIT=< YOUR_ACCESS_TOKEN_KEY_LIMIT >
 
 API_KEY=< SIGNATURE_API_KEY >
 SECRET_KEY=< SIGNATURE_SECRET_KEY >
+
+THROTTLE_TTL=< YOUR_THROTTLE_TTL >
+THROTTLE_LIMIT=< YOUR_THROTTLE_LIMIT >
 
